--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@ html, body {
     height: 100%;
     margin: 0;
 }
+body {
+    background: url('public/background.avif') no-repeat center center fixed;
+    background-size: cover; 
+}
 #root  {
     display: flex;
     flex-direction: column;
